--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "top-class-imports",
   "version": "1.0.0",
-  "description": "",
+  "description": "![top-class-index](https://user-images.githubusercontent.com/110944138/190487775-47566e6a-46ab-4ea0-ba20-578960e2d035.PNG)",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,8 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^6.6.0"
-  }
+    "mongoose": "^6.6.0",
+    "nodemon": "^2.0.20"
+  },
+  "devDependencies": {}
 }
